--- a/app/views/users/posts/like.js.erb
+++ b/app/views/users/posts/like.js.erb
@@ -1,10 +1,18 @@
- $('.preached-btn').on('ajax:success', function(){
-  $(this).parent().parent().find('.like_count')
-  .html('<%=@post.get_likes.size%> &#128591');
-  $(this).closest('.preached-btn').html('Preach');
-});
-$('.preach-btn').on('ajax:success', function(){
-  $(this).parent().parent().find('.like_count')
-  .html('<%=@post.get_likes.size%> &#128591');
-  $(this).closest('.preach-btn').html('Preached');
+$(document).ready(function() {
+
+  $(".fa-thumbs-up").click(function() {
+    let getDown = $(this).parent().find('.fa-thumbs-down');
+    if (getDown.hasClass('thumbs-down-clicked')) {
+      getDown.removeClass('thumbs-down-clicked');
+    }
+    $(this).addClass('thumbs-up-clicked ')
+  });
+
+  $(".fa-thumbs-down").click(function() {
+    let getUp = $(this).parent().find('.fa-thumbs-up');
+    if (getUp.hasClass('thumbs-up-clicked')) {
+      getUp.removeClass('thumbs-up-clicked');
+    }
+    $(this).addClass('thumbs-down-clicked ')
+  });
 });
