--- a/app/views/users/posts/show.html.erb
+++ b/app/views/users/posts/show.html.erb
@@ -36,13 +36,13 @@
   </div>
     <a>
       <%if current_user.liked? @post%>
-        <div> <%= button_to like_post_path(@post, 'unlike'), class: 'preached-btn',
-                method: :put, remote: :true do %> Liked </div>
+        <div> <%= link_to like_post_path(@post, 'unlike'), class: 'preached-btn',
+                method: :put, remote: :true do %> Preached </div>
         <% end %>
 
         <% else%>
-        <div> <%= button_to like_post_path(@post, 'like'), class: 'preach-btn',
-                method: :put, remote: :true do %> Like </div>
+        <div> <%= link_to like_post_path(@post, 'like'), class: 'preach-btn',
+                method: :put, remote: :true do %> Preach </div>
       <% end %>
       <% end %>
     </a>
