--- a/app/views/users/posts/show.html.erb
+++ b/app/views/users/posts/show.html.erb
@@ -34,18 +34,18 @@
       <%=@post.get_likes.size%> &#128077
     </span>
   </div>
-    <a>
-      <%if current_user.liked? @post%>
-        <div> <%= link_to like_post_path(@post, 'unlike'), class: 'preached-btn',
-                method: :put, remote: :true do %> Preached </div>
-        <% end %>
+      <% if user_signed_in? %>
+ <% if current_user.liked? @post %>
 
-        <% else%>
-        <div> <%= link_to like_post_path(@post, 'like'), class: 'preach-btn',
-                method: :put, remote: :true do %> Preach </div>
-      <% end %>
-      <% end %>
-    </a>
+<%= button_to "Dislike", dislike_post_path(@post), class: 'vote', method: :put, remote: true, data: { toggle_text: 'Like', toggle_href: like_post_path(@post), id: @post.id } %>
+<% else %>
+  <%= button_to "Like", like_post_path(@post), class: 'vote', method: :put, remote: true, data: { toggle_text: 'Dislike', toggle_href: dislike_post_path(@post), id: @post.id } %>
+
+<% end %>
+<% end %>
+
+<br>
+
   </span>
 
 
