--- a/app/views/users/posts/_form.html.erb
+++ b/app/views/users/posts/_form.html.erb
@@ -19,7 +19,9 @@
     <%= form.label :description %>
     <%= form.text_area :description, class: 'form-control' %>
   </div>
-
+  <div class="form-group">
+      <%= text_area_tag :content, "Hello, World!", :class => "tinymce" %>
+    </div>
 
 
 
