--- a/app/views/users/comments/_form.html.erb
+++ b/app/views/users/comments/_form.html.erb
@@ -7,7 +7,7 @@
     <%= form.text_area :comment %>
   </p>
   <p>
-    <%= form.file_field :cover_picture%>
+    <%= form.file_field :cover_picture, accept: 'image/png,image/gif,image/jpeg'%>
   </p>
   <p>
     <%= form.submit %>
