--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
     </script>
   </head>
   <body>
-    <p class="alert"><%= alert %></p>
+    <p class="alert red"><%= alert %></p>
 
     <div class='container'>
       <%= yield %>
