--- a/app/views/users/posts/_form.html.erb
+++ b/app/views/users/posts/_form.html.erb
@@ -1,3 +1,4 @@
+<%= tinymce %>
 <%= form_with(model: post, local: true) do |form| %>
   <% if post.errors.any? %>
     <div id="error_explanation">
@@ -12,16 +13,19 @@
 
   <div class="form-group">
     <%= form.label :title %>
-    <%= form.text_field :title, class: 'form-control' %>
+    <%= form.text_field :title, class: 'form-control', required: true %>
   </div>
 
   <div class="form-group">
     <%= form.label :description %>
-    <%= form.text_area :description, class: 'form-control' %>
+    <%= form.text_area :description, class: 'form-control', required: true %>
   </div>
   <div class="form-group">
-      <%= text_area_tag :content, "Hello, World!", :class => "tinymce" %>
-    </div>
+    <%= form.file_field :cover_picture, accept: 'image/png,image/gif,image/jpeg'%>
+  </div>
+  <div class="form-group">
+    <%= form.text_area :content, :class => "tinymce" %>
+  </div>
 
 
 
