--- a/app/views/users/posts/show.html.erb
+++ b/app/views/users/posts/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<p id="notice" class="red"><%= notice %></p>
 
 <p>
   <strong>Title:</strong>
@@ -23,6 +23,14 @@
 <p>
   <strong>User:</strong>
   <%= @post.user.name %>
+</p>
+<p>
+  <% if @post.cover_picture.attached?%>
+    <%= image_tag(@post.cover_picture, width: "100%", height: "400px") %>
+  <%end%>
+</p>
+<p>
+  <%= @post.content.html_safe %>
 </p>
 
 <% if @post.published? %>
@@ -58,7 +66,7 @@
       <% if current_user.id == @post.user.id%>
         <%= button_to 'Destroy', @posts,
                   method: :delete,
-                  data: { confirm: 'Are you sure?' }, class:'btn btn-primary', style: 'text-decoration : none' %>|
+                  class:'btn btn-primary', style: 'text-decoration : none' %>|
         <span>
         <%= link_to 'Edit', edit_post_path(@post), class: 'btn btn-primary' %>|
       <%end%>
