--- a/app/views/users/replies/_form.html.erb
+++ b/app/views/users/replies/_form.html.erb
@@ -1,6 +1,6 @@
 
 <%= form_tag({:controller=>"/replies", :action=>"create"}, method: :post) do %>
-  <%= text_field_tag :body %>
+  <%= text_field_tag :body,'', :required => true %>
   <%= hidden_field_tag :suggestion_id, suggestion_id%>
   <%= submit_tag 'reply', name: nil %>
 <% end %>
