--- a/app/views/users/suggestions/_form.html.erb
+++ b/app/views/users/suggestions/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: [ @post, @post.suggestions.build ], local: true) do |form| %>
   <p>
     <%= form.label :body %><br>
-    <%= form.text_area :body %>
+    <%= form.text_area :body, required: true %>
   </p>
 
   <p>
