--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -12,7 +12,7 @@
         <%end%>
         <%= button_to 'Destroy', post,
               method: :delete,
-              data: { confirm: 'Are you sure?' }, class:'btn btn-primary' %>
+              class:'btn btn-primary' %>
       </div>
     </div>
 <%end%>
