--- a/app/views/users/suggestions/_suggestion.html.erb
+++ b/app/views/users/suggestions/_suggestion.html.erb
@@ -13,7 +13,11 @@
       <%= link_to 'Reject', [suggestion.post, suggestion],
                   method: :delete, class: "button is-danger", data: { confirm: 'Are you sure?' } %>
 
+      <%= link_to 'Accept',edit_post_suggestion_path(suggestion.post, suggestion.id) ,
+                    class: "button is-danger" %>
+
     <%end%>
+
 
     <a href="#" class="comment-form-display">reply</a>
         <div class="sub-comment-form">
