--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -23,12 +23,12 @@
       <div class="col-md-6">
         <div class="field">
           <%= f.label :name %><br />
-          <%= f.text_field :name, autofocus: true %>
+          <%= f.text_field :name, required: true, autofocus: true %>
         </div>
 
         <div class="field">
           <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          <%= f.email_field :email, required: true, autofocus: true, autocomplete: "email" %>
         </div>
 
         <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -51,7 +51,7 @@
 
         <div class="field">
           <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-          <%= f.password_field :current_password, autocomplete: "current-password" %>
+          <%= f.password_field :current_password, required: true, autocomplete: "current-password" %>
         </div>
 
         <div class="actions">
