--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
   <%= render "devise/shared/error_messages", resource: resource %>
   <div class="field">
     <%= f.label :name %><br />
-    <%= f.text_field :name,class:'form-control', autofocus: true %>
+    <%= f.text_field :name, required: true,class:'form-control', autofocus: true %>
   </div>
 
   <!--Avatar Upload Field-->
@@ -17,7 +17,7 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email,class:'form-control', autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email,class:'form-control', required: true, autofocus: true, autocomplete: "email" %>
   </div>
 
   <div class="field">
@@ -25,12 +25,12 @@
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password,class:'form-control', autocomplete: "new-password" %>
+    <%= f.password_field :password,class:'form-control', required: true, autocomplete: "new-password" %>
   </div>
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation,class:'form-control', autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation,class:'form-control', required: true, autocomplete: "new-password" %>
   </div>
 
   <div class="field">
