--- a/app/views/users/posts/index.html.erb
+++ b/app/views/users/posts/index.html.erb
@@ -1,5 +1,5 @@
 <h4 class='d-flex justify-content-between mb-4'>
-  <span>Posts</span>
+  <span>Public Posts</span>
   <%= link_to 'New Post', new_post_path, class:'btn btn-primary' %>
 </h4>
 
@@ -14,6 +14,7 @@
       </div>
       <div class="comment-count">
         <span class="tag is-rounded"><%= post.comments.count %> comments</span>
+        <span class="tag is-rounded"><%= post.get_likes.size %> likes</span>
       </div>
     </div>
   <%end%>
