--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,7 +11,7 @@
   <!--Avatar Upload Field-->
 <div class="form-group">
 <label class="col-sm-4 col-form-label">Profile Pic:
-<div class="col-sm-8"><%= f.file_field :avatar, class: "form-control" %></div>
+<div class="col-sm-8"><%= f.file_field :avatar, required: true, class: "form-control" %></div>
 </div>
 <!--Avatar Upload Field-->
 
