--- a/app/views/users/comments/_form.html.erb
+++ b/app/views/users/comments/_form.html.erb
@@ -4,8 +4,8 @@
   <%end%>
 
   <p>
-    <%= form.label :comment %><br>
-    <%= form.text_area :comment %>
+    <%= form.label :body %><br>
+    <%= form.text_area :body %>
   </p>
 
   <p>
