--- a/app/views/users/comments/_form.html.erb
+++ b/app/views/users/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [ @post, @post.comments.build ], local: true) do |form| %>
+<%= form_with(model: [ @post, @post.comments.build ]) do |form| %>
   <% if !parent.nil? %>
     <input type="hidden" name="comment[parent_id]" value="<%= parent.id %>">
   <% end %>
