--- a/app/views/users/posts/_form.html.erb
+++ b/app/views/users/posts/_form.html.erb
@@ -1,15 +1,6 @@
 <%= tinymce %>
-<%= form_with(model: post, local: true) do |form| %>
-  <% if post.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
-      <ul>
-        <% post.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= form_with(model: post) do |form| %>
+
 
   <div class="form-group">
     <%= form.label :title %>
