--- a/app/views/users/suggestions/_form.html.erb
+++ b/app/views/users/suggestions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [ @post, @post.suggestions.build ], local: true) do |form| %>
+<%= form_with(model: [ @post, @post.suggestions.build ]) do |form| %>
   <p>
     <%= form.label :body %><br>
     <%= form.text_area :body, required: true %>
