rubocop offenses fixed

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -12,6 +12,7 @@
         <% end %>
         <%= button_to 'Destroy', post,
               method: :delete,
+              remote: true,
               class:'btn btn-primary' %>
       </div>
     </div>
