--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,8 +2,6 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
 <%= render "devise/shared/error_messages", resource: resource %>
 
-
-
 <div class="container">
 
   <div class="comment-form">
@@ -66,7 +64,7 @@
     <div class="justify-content-center">
       <h3>Cancel my account</h3>
       <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-      <%= link_to "Back", :back %>
+      <%= link_to "Back", posts_path, remote: true %>
     </div>
 
   </div>
